--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
                   <div class="overlay overlay-bg"></div>
                   <img
                     class="image img-fluid"
-                    src="images/kios kopi tepian sosmed.jpg"
+                    src="images/Cover Slide.jpg"
                     alt=""
                   />
                 </div>
-                <a href="images/kios kopi tepian sosmed.jpg" class="img-pop-up">
+                <a href="images/Cover Slide.jpg" class="img-pop-up">
                   <div class="middle">
                     <div class="text align-self-center d-flex">
                       <img src="images/preview.png" alt="" />
@@ -109,16 +109,20 @@
                 </a>
               </div>
               <div class="p-inner">
-                <h4>Kios Kopi Tepian</h4>
-                <div class="cat">Final project mentoring myskill (Kios kopi tepian)</div>
+                <a
+                  href="/images/Kelompok 13 (Batch 21) - Digital Marketing Project Kios Tepian Kopi (1)_compressed.pdf"
+                  download
+                  >Kios kopi tepian</a
+                >
+                <div class="cat">
+                  Final project mentoring myskill (Kios kopi tepian)
+                </div>
               </div>
             </div>
           </div>
         </div>
       </div>
     </section>
-    <!-- .section -->
-
     <section class="site-section" id="section-resume">
       <div class="container">
         <div class="row">
@@ -135,11 +139,14 @@
               >
               <h3>Bachelor In Management</h3>
               <p>
-                6th semester student at Budi Luhur University, Bachelor of Business Management Study Program. Control 
-                basic knowledge of Business Management. Have Digital Marketing Skills such as Social Media Marketing, 
-                Copywriting, Brand Strategy, Brand Analyst, Paid advertising, Graphic Design, and owning 
-                basic Office Software capabilities such as Microsoft Word, Microsoft Excel, and Microsoft Power 
-                Points. Have an interest in a career as a Marketing Specialist or Digital Marketing Specialist staff
+                6th semester student at Budi Luhur University, Bachelor of
+                Business Management Study Program. Control basic knowledge of
+                Business Management. Have Digital Marketing Skills such as
+                Social Media Marketing, Copywriting, Brand Strategy, Brand
+                Analyst, Paid advertising, Graphic Design, and owning basic
+                Office Software capabilities such as Microsoft Word, Microsoft
+                Excel, and Microsoft Power Points. Have an interest in a career
+                as a Marketing Specialist or Digital Marketing Specialist staff
               </p>
               <span class="school">Budi Luhur University</span>
             </div>
@@ -182,8 +189,6 @@
         </div>
       </div>
     </section>
-    <!-- .section -->
-
     <section class="site-section" id="section-about">
       <div class="container">
         <div class="row mb-5 align-items-center">
@@ -210,7 +215,10 @@
                 class="btn btn-primary px-4 py-2 btn-sm smoothscroll"
                 >Hire Me</a
               >
-              <a href="/images/CV Ajrun Azhim Fawwas.pdf" download class="btn btn-secondary px-4 py-2 btn-sm"
+              <a
+                href="/images/CV_Ajrun Azhim Fawwas2.pdf"
+                download
+                class="btn btn-secondary px-4 py-2 btn-sm"
                 >Download CV</a
               >
             </p>
@@ -218,110 +226,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <section class="site-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md-12">
-            <div class="section-heading text-center">
-              <h2>Client <strong>Testimonial</strong></h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="block-47 d-flex mb-5">
-              <div class="block-47-image">
-                <img
-                  src="images/person_1.jpg"
-                  alt="Image placeholder"
-                  class="img-fluid"
-                />
-              </div>
-              <blockquote class="block-47-quote">
-                <p>
-                  &ldquo;Far far away, behind the word mountains, far from the
-                  countries Vokalia and Consonantia, there live the blind texts.
-                  Separated they live in Bookmarksgrove right at the coast of
-                  the Semantics, a large language ocean.&rdquo;
-                </p>
-                <cite class="block-47-quote-author"
-                  >&mdash; Ethan McCown, CEO <a href="#">XYZ Inc.</a></cite
-                >
-              </blockquote>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="block-47 d-flex mb-5">
-              <div class="block-47-image">
-                <img
-                  src="images/person_2.jpg"
-                  alt="Image placeholder"
-                  class="img-fluid"
-                />
-              </div>
-              <blockquote class="block-47-quote">
-                <p>
-                  &ldquo;Far far away, behind the word mountains, far from the
-                  countries Vokalia and Consonantia, there live the blind texts.
-                  Separated they live in Bookmarksgrove right at the coast of
-                  the Semantics, a large language ocean.&rdquo;
-                </p>
-                <cite class="block-47-quote-author"
-                  >&mdash; Craig Gowen, CEO <a href="#">XYZ Inc.</a></cite
-                >
-              </blockquote>
-            </div>
-          </div>
-
-          <div class="col-md-6">
-            <div class="block-47 d-flex mb-5">
-              <div class="block-47-image">
-                <img
-                  src="images/person_3.jpg"
-                  alt="Image placeholder"
-                  class="img-fluid"
-                />
-              </div>
-              <blockquote class="block-47-quote">
-                <p>
-                  &ldquo;Far far away, behind the word mountains, far from the
-                  countries Vokalia and Consonantia, there live the blind texts.
-                  Separated they live in Bookmarksgrove right at the coast of
-                  the Semantics, a large language ocean.&rdquo;
-                </p>
-                <cite class="block-47-quote-author"
-                  >&mdash; Ethan McCown, CEO <a href="#">XYZ Inc.</a></cite
-                >
-              </blockquote>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="block-47 d-flex mb-5">
-              <div class="block-47-image">
-                <img
-                  src="images/person_4.jpg"
-                  alt="Image placeholder"
-                  class="img-fluid"
-                />
-              </div>
-              <blockquote class="block-47-quote">
-                <p>
-                  &ldquo;Far far away, behind the word mountains, far from the
-                  countries Vokalia and Consonantia, there live the blind texts.
-                  Separated they live in Bookmarksgrove right at the coast of
-                  the Semantics, a large language ocean.&rdquo;
-                </p>
-                <cite class="block-47-quote-author"
-                  >&mdash; Craig Gowen, CEO <a href="#">XYZ Inc.</a></cite
-                >
-              </blockquote>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
     <section class="site-section pb-0" id="section-services">
       <div class="container">
         <div class="row mb-4">
@@ -365,7 +269,7 @@
               <h3 class="mb-4">Brand Strategy</h3>
             </div>
           </div>
-		  <div class="col-md-6 col-lg-4 text-center mb-5">
+          <div class="col-md-6 col-lg-4 text-center mb-5">
             <div
               class="site-service-item site-animate"
               data-animate-effect="fadeIn"
@@ -376,7 +280,7 @@
               <h3 class="mb-4">Graphics Design</h3>
             </div>
           </div>
-		  <div class="col-md-6 col-lg-4 text-center mb-5">
+          <div class="col-md-6 col-lg-4 text-center mb-5">
             <div
               class="site-service-item site-animate"
               data-animate-effect="fadeIn"
@@ -387,7 +291,7 @@
               <h3 class="mb-4">PPC Advertising</h3>
             </div>
           </div>
-		  <div class="col-md-6 col-lg-4 text-center mb-5">
+          <div class="col-md-6 col-lg-4 text-center mb-5">
             <div
               class="site-service-item site-animate"
               data-animate-effect="fadeIn"
@@ -573,7 +477,9 @@
         <div class="row mb-5">
           <div class="col-md-12 text-center">
             <p>
-              <a href="https://www.linkedin.com/in/ajrun-azhimf/" class="social-item"
+              <a
+                href="https://www.linkedin.com/in/ajrun-azhimf/"
+                class="social-item"
                 ><span class="icon-linkedin2"></span
               ></a>
               <a href="mailto:ajrunazimfawwas23@gmail.com" class="social-item"
